[package]
name = "gungnir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.serde]
version = "1.0.136"
features = ["derive"]

[dependencies.tokio]
version = "1.18.4"
features = ["full"]

[dependencies]
log = "0.4.16"
c2rs = "0.1.2"
bincode = "1.3.3"
futures = "0.3.21"
